// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Articles can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": Object {
        "breaking": true,
        "lead": "This article will rock your world. Never has there been a better article",
        "preTitle": "Testing GraphQL",
        "properties": Array [
          Object {
            "key": "testingKey",
            "public": true,
            "value": "testingValue",
          },
          Object {
            "key": "privateTestingKey",
            "public": false,
            "value": "privateTestingValue",
          },
        ],
        "publishedAt": null,
        "revision": 0,
        "slug": "my-super-seo-slug-for-the-best-article",
        "tags": Array [
          "testing",
          "awesome",
        ],
        "title": "This is the best test article",
        "updatedAt": null,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "article": Object {
      "id": Any<String>,
      "latest": Object {
        "authors": Array [],
        "blocks": Array [],
        "breaking": true,
        "hideAuthor": false,
        "image": null,
        "lead": "This article will rock your world. Never has there been a better article",
        "preTitle": "Testing GraphQL",
        "properties": Array [
          Object {
            "key": "testingKey",
            "public": true,
            "value": "testingValue",
          },
          Object {
            "key": "privateTestingKey",
            "public": false,
            "value": "privateTestingValue",
          },
        ],
        "publishedAt": null,
        "revision": 0,
        "slug": "my-super-seo-slug-for-the-best-article",
        "tags": Array [
          "testing",
          "awesome",
        ],
        "title": "This is the best test article",
        "updatedAt": null,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can delete 1`] = `
Object {
  "data": Object {
    "deleteArticle": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can read list 1`] = `
Object {
  "data": Object {
    "articles": Object {
      "nodes": Array [
        Object {
          "createdAt": Any<String>,
          "draft": Object {
            "revision": 0,
          },
          "id": Any<String>,
          "latest": Object {
            "image": null,
            "lead": "This article will rock your world. Never has there been a better article",
            "preTitle": "Testing GraphQL",
            "publishedAt": null,
            "revision": 0,
            "title": "This is the best test article",
            "updatedAt": null,
          },
          "modifiedAt": Any<String>,
          "pending": null,
          "published": null,
        },
      ],
      "pageInfo": Object {
        "endCursor": Any<String>,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": Any<String>,
      },
      "totalCount": 1,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Articles can be created/edited/deleted: can update article 1`] = `
Object {
  "data": Object {
    "updateArticle": Object {
      "draft": Object {
        "publishedAt": null,
        "revision": 0,
        "updatedAt": null,
      },
      "id": Any<String>,
      "latest": Object {
        "breaking": true,
        "lead": "This updated article will rock your world. Never has there been a better article",
        "preTitle": "Testing GraphQL",
        "properties": Array [
          Object {
            "key": "testingKey",
            "public": true,
            "value": "testingValue",
          },
          Object {
            "key": "privateTestingKey",
            "public": false,
            "value": "privateTestingValue",
          },
        ],
        "publishedAt": null,
        "revision": 0,
        "slug": "updated-slug",
        "tags": Array [
          "testing",
          "awesome",
          "another",
        ],
        "title": "New Updated Title",
        "updatedAt": null,
      },
      "pending": null,
      "published": null,
      "shared": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
